--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "adm-dtp",
   "version": "1.1.4",
   "description": "Pure AngularJs Gregorian and Jalali smart dateTimePicker",
-  "main": "ADM-dateTimePicker.js",
+  "main": "dist/ADM-dateTimePicker.js",
   "scripts": {
     "test": "karma"
   },
