--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "adm-dtp",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "homepage": "https://github.com/AmirkabirDataMiners/ADM-dateTimePicker",
   "authors": [
     "ADM | Amirkabir Data Miners <info@adm-co.net>"
@@ -24,10 +24,9 @@
   ],
   "license": "MIT",
   "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
+      "*.DS_Store",
+      ".git",
+      ".gitignore",
+      ".sass-cache"
   ]
 }
