--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "adm-dtp",
-  "version": "1.1.6",
+  "version": "1.1.7",
   "homepage": "https://github.com/AmirkabirDataMiners/ADM-dateTimePicker",
   "authors": [
     "ADM | Amirkabir Data Miners <info@adm-co.net>"
@@ -24,6 +24,7 @@
   ],
   "license": "MIT",
   "ignore": [
+      "*.log"
       "*.DS_Store",
       ".git",
       ".gitignore",
