--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,10 @@
     "ADM | Amirkabir Data Miners <info@adm-co.net>"
   ],
   "description": "Pure AngularJs Gregorian and Jalali smart dateTimePicker",
-  "main": "ADM-dateTimePicker.js",
+  "main": [
+    "dist/ADM-dateTimePicker.js",
+    "dist/ADM-dateTimePicker.css"
+  ],
   "moduleType": [
     "globals"
   ],
